2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpcolorselectorpalette.[ch]: new widget featuring
	a proof-of-concept palette color selector. It always shows the
	current palette and doesn't bother to have any features yet. If I
	don't get around finishing this I will disable it for the 2.4
	release, but it's better kept in CVS than on my disk...
	Addresses bug #132146.

	* app/widgets/gimpcolordialog.c (gimp_color_dialog_new): attach
	the passed context to the dialog so the palette selector can find
	it (puke).

	* app/gui/gui.c (gui_restore_callback): register the new object
	with the GType system.

2006-11-03  Michael Natterer  <mitch@gimp.org>

	* app/core/core-enums.[ch] (enum GimpUndoType): added value
	GIMP_UNDO_GROUP_LAYER_ADD.

	* app/file/file-open.[ch]: changed file_open_layer() to
	file_open_layers(), added parameter "gboolean merge_visible",
	return a GList of layers.

	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimplayertreeview.c: pass merge_visible = FALSE and
	add all returned layers to the image. Fixes bug #358082.
	(contains lots of duplicated code, will factor that out later).

	* tools/pdbgen/pdb/fileops.pdb (load_layer): pass merge_visible = TRUE
	(load_layers): new wrapper which returns all the image's layers.

	* app/pdb/fileops_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpfileops_pdb.[ch]: regenerated.

	* libgimp/gimp.def: changed accordingly.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: use gimp_any_to_utf8().

2006-11-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): use "Fade" instead
	of "OK" in action button, added mnemonics.

2006-11-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c (image_comment_update)
	* app/text/gimptext-parasite.c (gimp_text_from_gdyntext_parasite):
	use gimp_any_to_utf8() to deal with invalid UTF-8 strings.
